--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
  /**body { 
 
-       font-family: Arial, sans-serif; 
+       font-family: sans-serif; 
        background-color: #f4f4f4; 
        padding: 20px; 
        color: #333; }
